--- a/fenix/app/src/main/res/layout/onboarding_manual_signin.xml
+++ b/fenix/app/src/main/res/layout/onboarding_manual_signin.xml
@@ -36,7 +36,7 @@
         android:text="@string/onboarding_account_sign_in_header" />
 
     <TextView
-        android:id="@+id/description_text"
+        android:id="@+id/title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
@@ -50,7 +50,7 @@
         style="@style/NeutralOnboardingButton"
         android:layout_marginTop="10dp"
         android:text="@string/onboarding_firefox_account_sign_in"
-        app:layout_constraintTop_toBottomOf="@id/description_text"
+        app:layout_constraintTop_toBottomOf="@id/title_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="parent"  />
 </androidx.constraintlayout.widget.ConstraintLayout>
