--- a/fenix/app/src/main/res/layout/onboarding_privacy_notice.xml
+++ b/fenix/app/src/main/res/layout/onboarding_privacy_notice.xml
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
     <TextView
-            android:id="@+id/description_text"
+            android:id="@+id/title_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="@style/Body14TextStyle"
@@ -39,7 +39,7 @@
         android:id="@+id/read_button"
         android:text="@string/onboarding_privacy_notice_read_button"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/description_text"
+        app:layout_constraintTop_toBottomOf="@id/title_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
