--- a/fenix/app/src/main/res/layout/onboarding_theme_picker.xml
+++ b/fenix/app/src/main/res/layout/onboarding_theme_picker.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/description_text"
+        android:id="@+id/title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="16dp"
@@ -71,7 +71,7 @@
         app:layout_constraintEnd_toStartOf="@+id/theme_dark_image"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_text"
+        app:layout_constraintTop_toBottomOf="@+id/title_text"
         app:srcCompat="@drawable/onboarding_light_theme" />
 
     <org.mozilla.fenix.onboarding.OnboardingRadioButton
@@ -99,7 +99,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/theme_light_image"
-        app:layout_constraintTop_toBottomOf="@+id/description_text"
+        app:layout_constraintTop_toBottomOf="@+id/title_text"
         app:srcCompat="@drawable/onboarding_dark_theme" />
 
     <TextView
