--- a/fenix/app/src/main/res/layout/onboarding_toolbar_position_picker.xml
+++ b/fenix/app/src/main/res/layout/onboarding_toolbar_position_picker.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/description_text"
+        android:id="@+id/title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="16dp"
@@ -45,7 +45,7 @@
         android:translationX="@dimen/onboarding_dual_pane_radio_button_translation_x"
         android:translationY="@dimen/onboarding_dual_pane_radio_button_translation_y"
         app:layout_constraintStart_toStartOf="@+id/toolbar_bottom_image"
-        app:layout_constraintTop_toBottomOf="@+id/description_text"
+        app:layout_constraintTop_toBottomOf="@+id/title_text"
         app:layout_constraintTop_toTopOf="@+id/toolbar_bottom_image"
         app:onboardingKey="@string/pref_key_toolbar_bottom" />
 
@@ -61,7 +61,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintEnd_toStartOf="@+id/toolbar_top_image"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_text"
+        app:layout_constraintTop_toBottomOf="@+id/title_text"
         app:srcCompat="@drawable/onboarding_toolbar_bottom" />
 
     <TextView
@@ -100,7 +100,7 @@
         android:translationX="@dimen/onboarding_dual_pane_radio_button_translation_x"
         android:translationY="@dimen/onboarding_dual_pane_radio_button_translation_y"
         app:layout_constraintStart_toStartOf="@+id/toolbar_top_image"
-        app:layout_constraintTop_toBottomOf="@+id/description_text"
+        app:layout_constraintTop_toBottomOf="@+id/title_text"
         app:layout_constraintTop_toTopOf="@+id/toolbar_top_image"
         app:onboardingKey="@string/pref_key_toolbar_top" />
 
@@ -115,7 +115,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/toolbar_bottom_image"
-        app:layout_constraintTop_toBottomOf="@+id/description_text"
+        app:layout_constraintTop_toBottomOf="@+id/title_text"
         app:srcCompat="@drawable/onboarding_toolbar_top" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
